2017-09-27  Bob Weiner  <rsw@gnu.org>

* hui-window.el (pulse): Added require for momentary highlighting of buffer/file
    item lines.
                (hmouse-pulse-line): Added.
                (hmouse-item-to-window): Added pulses to source and dest. lines.

2017-09-26  Bob Weiner  <rsw@gnu.org>

* hmouse-drv.el (action-key-depress): Added action-key-depress-hook.
                (assist-key-depress): Added assist-key-depress-hook.
		(action-mouse-key):   Added action-key-release-hook.
		(assist-mouse-key):   Added assist-key-release-hook.
                (action-key): Added action-key-depress/release-hook.
		(assist-key): Added assist-key-depress/release-hook.
  hui-window.el (action-key-depress-hook): Set to select helm items
    prior to a drag outside the helm buffer window.

* hui-mouse.el (smart-helm-line-has-action): Fixed to use position of
    Action Key depress; this properly selects the item chosen, even when
    a cross-window drag is used; this allows helm buffer and file items to
    be used in Hyperbole drag actions.

* hib-social.el (github-reference): Added support for
    gh#orgs/<org-name>/people query to list users in an org.

* hmouse-drv.el (hmouse-depress-inactive-minibuffer-p): Improved doc and
    changed param name to `event'.
                (action-key-depress-window, assist-key-depress-window):
    Improved doc.

* hui-window.el (smart-coords-in-window-p, smart-window-of-coords,
                 hmouse-inactive-minibuffer-p): 
  hmouse-drv.el (hmouse-depress-inactive-minibuffer-p): 
  hargs.el (hargs:select-event-window): Updated to handle multiple frames and minibuffers.

* hui-window.el (hmouse-alist): Extended hmouse-drag-between-windows to
    allow dragging items from a buffer menu or file menu buffer to a destination
    window for display.  Helm buffer items are supported as well.
                (hmouse-item-to-window, hmouse-drag-buffer-to-window): Added.